--- a/movie_review_service/ml/training/fine_tuning_walkthrough.ipynb
+++ b/movie_review_service/ml/training/fine_tuning_walkthrough.ipynb
@@ -4,11 +4,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Fine-tuning DistilBERT for Sentiment Analysis\n\n",
-        "This notebook walks through the process of fine-tuning a DistilBERT model for sentiment analysis using the IMDB movie reviews dataset.\n\n",
-        "## Why DistilBERT?\n\n",
-        "DistilBERT is a distilled version of BERT that retains 97% of its language understanding capabilities while being 40% smaller and 60% faster.\n\n",
-        "## What We'll Cover\n\n",
+        "# Fine-tuning DistilBERT for Sentiment Analysis\n",
+        "\n",
+        "This notebook walks through the process of fine-tuning a DistilBERT model for sentiment analysis using the IMDB movie reviews dataset.\n",
+        "\n",
+        "## Why DistilBERT?\n",
+        "\n",
+        "DistilBERT is a distilled version of BERT (Bidirectional Encoder Representations from Transformers) that retains 97% of its language understanding capabilities while being 40% smaller and 60% faster.\n",
+        "\n",
+        "## What this Notebook Covers\n",
+        "\n",
         "1. Data preparation and preprocessing\n",
         "2. Model configuration and training\n",
         "3. Evaluation and testing\n"
@@ -18,6 +23,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "import torch\n",
         "from transformers import (\n",
@@ -45,7 +51,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1. Data Preparation\n\n",
+        "## 1. Data Preparation\n",
+        "\n",
         "First, we'll create our dataset class and load the IMDB dataset."
       ]
     },
@@ -53,6 +60,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "class IMDBDataset(Dataset):\n",
         "    def __init__(self, texts, labels, tokenizer, max_length=512):\n",
@@ -78,7 +86,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2. Model Configuration\n\n",
+        "## 2. Model Configuration\n",
+        "\n",
         "Now we'll set up our DistilBERT model and configure it for fine-tuning."
       ]
     },
@@ -86,19 +95,41 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "def initialize_model(model_name='distilbert-base-uncased'):\n",
         "    tokenizer = DistilBertTokenizer.from_pretrained(model_name)\n",
         "    model = DistilBertForSequenceClassification.from_pretrained(\n",
         "        model_name,\n",
-        "        num_labels=2\n",
+        "        num_labels=2  # Still using 2 labels since neutral is determined by confidence\n",
         "    )\n",
+        "    \n",
+        "    # Add comment explaining our approach\n",
+        "    # Note: This model outputs binary predictions (positive/negative)\n",
+        "    # Neutral sentiment is determined at inference time using a confidence threshold\n",
+        "    # when confidence < CONFIDENCE_THRESHOLD (default 0.50)\n",
         "    \n",
         "    # Freeze base model layers\n",
         "    for param in model.distilbert.parameters():\n",
         "        param.requires_grad = False\n",
         "    \n",
         "    return model, tokenizer"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Note on Three-Class Classification\n",
+        "\n",
+        "While this model is trained on binary labels (positive/negative), our inference pipeline \n",
+        "supports three-class classification (positive/negative/neutral) by using a confidence threshold:\n",
+        "\n",
+        "- If prediction confidence < 0.50: Classify as \"neutral\"\n",
+        "- Otherwise: Use model's binary prediction (positive/negative)\n",
+        "\n",
+        "This approach allows us to identify reviews with ambiguous sentiment without requiring \n",
+        "three-class training data."
       ]
     }
   ],
@@ -118,7 +149,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.0"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
